<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jinyoon.project0_rev1.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="My Nanodegree Apps"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:text="@string/btn1"
                android:id="@+id/btnProject1"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/btn_vertical_margin"

                android:textColor="@color/btn_text"
                android:textSize="@dimen/btn_text_size"
                android:background="@color/btn_background"
                android:onClick="showToast" />
            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:text="@string/btn2"
                android:id="@+id/btnProject2"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/btn_vertical_margin"

                android:textColor="@color/btn_text"
                android:textSize="@dimen/btn_text_size"
                android:background="@color/btn_background"
                android:onClick="showToast" />
            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:text="@string/btn3"
                android:id="@+id/btnProject3"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/btn_vertical_margin"

                android:textColor="@color/btn_text"
                android:textSize="@dimen/btn_text_size"
                android:background="@color/btn_background"
                android:onClick="showToast" />
            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:text="@string/btn4"
                android:id="@+id/btnProject4"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/btn_vertical_margin"

                android:textColor="@color/btn_text"
                android:textSize="@dimen/btn_text_size"
                android:background="@color/btn_background"
                android:onClick="showToast" />
            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:text="@string/btn5"
                android:id="@+id/btnProject5"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/btn_vertical_margin"

                android:textColor="@color/btn_text"
                android:textSize="@dimen/btn_text_size"
                android:background="@color/btn_background"
                android:onClick="showToast" />
            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:text="@string/btn6"
                android:id="@+id/btnProject6"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/btn_vertical_margin"

                android:textColor="@color/btn_text"
                android:textSize="@dimen/btn_text_size"
                android:background="@color/btn_background"
                android:onClick="showToast" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
